Remove db and __pychache__

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .idea/
 venv
 NewspaperAgency/__pycache__/
-__pycache__
+agency/__pycache__/
+__pycache__/
 local_settings.py
 NewspaperAgency/settings_secret.py
 newspaper_agency_db_data.json
