--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ dj-database-url==2.1.0
 Django==5.0.4
 django-crispy-forms==2.1
 django-debug-toolbar==4.3.0
+gunicorn==22.0.0
+packaging==24.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 sqlparse==0.5.0
 typing_extensions==4.11.0
 tzdata==2024.1
