--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,21 @@
 *.log
 *.pot
 *.pyc
+__pycache__
 __pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
+.idea
 .idea/
 venv
 NewspaperAgency/__pycache__/
 agency/__pycache__/
 NewspaperAgency/settings_secret.py
 newspaper_agency_db_data.json
+/static/
+collectstatic
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
